<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>

    <string name="my_title">My Nanodegree Apps!</string>

    <string name="button_app1">Spotify Streamer</string>
    <string name="button_app2">Football Scores App</string>
    <string name="button_app3">Library App</string>
    <string name="button_app4">Build It Bigger</string>
    <string name="button_app5">XYZ Reader</string>
    <string name="button_app6">Capstone</string>

    <string name="button_app1_toast">This button will launch my Spotify Streamer app!</string>
    <string name="button_app2_toast">This button will launch my Football Scores app!</string>
    <string name="button_app3_toast">This button will launch my Library app!</string>
    <string name="button_app4_toast">This button will launch my Build It Bigger app!</string>
    <string name="button_app5_toast">This button will launch my XYZ Reader app!</string>
    <string name="button_app6_toast">This button will launch my Capstone app!</string>

</resources>
