<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context=".MainActivity"
    android:backgroundTint="#F08C35">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/my_title"
        android:id="@+id/textView"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:gravity="center"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/button_app1"
        android:id="@+id/button1"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:textAllCaps="true"
        android:onClick="showToast"
        android:background ="#F08C35"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/button_app2"
        android:id="@+id/button2"
        android:layout_marginTop="8dp"
        android:textAllCaps="true"
        android:onClick="showToast"
        android:background="#F08C35" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/button_app3"
        android:id="@+id/button3"
        android:layout_marginTop="8dp"
        android:textAllCaps="true"
        android:onClick="showToast"
        android:background="#F08C35" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/button_app4"
        android:id="@+id/button4"
        android:layout_marginTop="8dp"
        android:textAllCaps="true"
        android:onClick="showToast"
        android:background="#F08C35" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/button_app5"
        android:id="@+id/button5"
        android:layout_marginTop="8dp"
        android:textAllCaps="true"
        android:onClick="showToast"
        android:background="#F08C35" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/button_app6"
        android:id="@+id/button6"
        android:layout_marginTop="8dp"
        android:textAllCaps="true"
        android:onClick="showToast"
        android:background="@color/material_blue_grey_800" />
</LinearLayout>